chore: update the lorem ipsum content

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <ul class="header-top-list">
 
           <li>
-            <a href="mailto:info@homeverse.com" class="header-top-link">
+            <a href="mailto:rommelcanoy04@gmail.com" class="header-top-link">
               <ion-icon name="mail-outline"></ion-icon>
 
-              <span>info@homeverse.com</span>
+              <span>rommelcanoy04@gmail.com</span>
             </a>
           </li>
 
@@ -206,7 +206,8 @@
             <h2 class="h1 hero-title">Find Your Dream House By Us</h2>
 
             <p class="hero-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
+              Discover your dream home with us. We specialize in finding properties that fit your lifestyle and
+              preferences. Let's make your home ownership dreams a reality.
             </p>
 
             <button class="btn">Make An Enquiry</button>
@@ -286,8 +287,8 @@
             </ul>
 
             <p class="callout">
-              "Enimad minim veniam quis nostrud exercitation
-              llamco laboris. Lorem ipsum dolor sit amet"
+              "Embark on a journey to find your dream rental property. Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit."
             </p>
 
             <a href="#service" class="btn">Our Services</a>
@@ -326,8 +327,8 @@
                 </h3>
 
                 <p class="card-text">
-                  over 1 million+ homes for sale available on the website, we can match you with a house you will want
-                  to call home.
+                  Explore our wide selection of homes for sale. With over 1 million+ homes available on the website, we
+                  can match you with a house you'll want to call home.
                 </p>
 
                 <a href="#" class="card-link">
@@ -351,8 +352,8 @@
                 </h3>
 
                 <p class="card-text">
-                  over 1 million+ homes for sale available on the website, we can match you with a house you will want
-                  to call home.
+                  Discover our rental listings and find the perfect home for your needs. With a wide range of options,
+                  we can match you with a rental property you'll love.
                 </p>
 
                 <a href="#" class="card-link">
@@ -376,8 +377,8 @@
                 </h3>
 
                 <p class="card-text">
-                  over 1 million+ homes for sale available on the website, we can match you with a house you will want
-                  to call home.
+                  Ready to sell your home? Our experienced team can assist you in the selling process and help you find
+                  the right buyer for your property.
                 </p>
 
                 <a href="#" class="card-link">
@@ -1268,7 +1269,9 @@
           </a>
 
           <p class="section-text">
-            Lorem Ipsum is simply dummy text of the and typesetting industry. Lorem Ipsum is dummy text of the printing.
+            Welcome to Homeverse – your trusted partner in finding your dream home. With a dedication to quality service
+            and
+            a vast selection of properties, we're here to make your journey to homeownership seamless and exciting.
           </p>
 
           <ul class="contact-list">
@@ -1436,7 +1439,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2023 <a href="#">Rommel Canoy</a>. All Rights Reserved
+          &copy; 2023 <a href="#">Built by Rommel Canoy</a>
         </p>
 
       </div>
