chore: update the content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="./  " type="image/svg+xml">
 
   <!-- 
     - custom css link
@@ -54,7 +54,7 @@
             <a href="#" class="header-top-link">
               <ion-icon name="location-outline"></ion-icon>
 
-              <address>15/A, Nest Tower, NYC</address>
+              <address>Tagum City, Philippines</address>
             </a>
           </li>
 
@@ -287,8 +287,7 @@
             </ul>
 
             <p class="callout">
-              "Embark on a journey to find your dream rental property. Lorem ipsum dolor sit amet, consectetur
-              adipiscing elit."
+              "Embark on an adventure to discover your ideal rental property. Explore the possibilities today!"
             </p>
 
             <a href="#service" class="btn">Our Services</a>
@@ -1280,7 +1279,7 @@
               <a href="#" class="contact-link">
                 <ion-icon name="location-outline"></ion-icon>
 
-                <address>Brooklyn, New York, United States</address>
+                <address>Tagum City, Philippines</address>
               </a>
             </li>
 
@@ -1293,10 +1292,10 @@
             </li>
 
             <li>
-              <a href="mailto:contact@homeverse.com" class="contact-link">
+              <a href="mailto:rommelcanoy04@gmail.com" class="contact-link">
                 <ion-icon name="mail-outline"></ion-icon>
 
-                <span>contact@homeverse.com</span>
+                <span>rommelcanoy04@gmail.com</span>
               </a>
             </li>
 
