chore: update content

--- a/index.html
+++ b/index.html
@@ -899,9 +899,9 @@
       <section class="features">
         <div class="container">
 
-          <p class="section-subtitle">Our Aminities</p>
+          <p class="section-subtitle">Our Amenities</p>
 
-          <h2 class="h2 section-title">Building Aminities</h2>
+          <h2 class="h2 section-title">Building Amenities</h2>
 
           <ul class="features-list">
 
